@startuml
' LLM Interface as a Strategy
interface LLM {
  +create_prompt(base_prompt: str, **kwargs) : str
  +generate(prompt: str) : str
}

' Concrete implementation using OpenAI
class OpenAI_LLM {
  -config: Config
  -model: str
  -client: OpenAI
  +create_prompt(base_prompt: str, **kwargs) : str
  +generate(prompt: str) : str
}

' Concrete implementation using Google Gemini
class Gemini_LLM {
  -config: Config
  -model: str
  -client: GenerativeModel
  +create_prompt(base_prompt: str, **kwargs) : str
  +generate(prompt: str) : str
}

' Realization relationships
LLM <|.. OpenAI_LLM
LLM <|.. Gemini_LLM

' Factory function note for instance creation
note right of LLM : Factory (create_llm) selects\nan appropriate LLM strategy

@enduml
